Fix missing padding-left on ordered lists (related posts)
The ul rule had padding-left: 1em but ol was not included,
causing the Related Posts list to lack left padding compared
to the Links list above it.

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, p, li {
     padding-top: 0.25em;
     padding-bottom: 0.25em;
 }
-ul {
+ul, ol {
     padding-left: 1em;
 }
 h1 {
